--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -4,12 +4,15 @@
     <string name="location_text">Konum</string>
     <string name="prayer_bar_text">Gününüze bu dualarla başlayın</string>
     <string name="remaining_time_text">Sonraki namaza kalan süre</string>
+    <string name="imsak">İmsak</string>
     <string name="morning">Sabah</string>
+    <string name="sunrise">Güneş</string>
     <string name="noon">Öğle</string>
     <string name="afternoon">İkindi</string>
     <string name="evening">Akşam</string>
     <string name="night">Yatsı</string>
     <string name="prayer_tracker">Namaz takibi</string>
+    <string name="alarm_not_set">Henüz kurulu alarm yok</string>
     <string name="pray_together">Tümünü ayarla</string>
     <string name="daily_prayer">Günlük Dua</string>
     <string name="see_all">Tümünü Gör</string>
@@ -278,4 +281,5 @@
     <string name="sound_option_sound_2">Alarm Sesi 2</string>
     <string name="sound_option_sound_3">Alarm Sesi 3</string>
     <string name="arrow_icon">Aç/kapat oku</string>
+    <string name="update_location_service">Namaz vakitleri konumunuza göre güncelleniyor... Konum izni kullanılıyor.</string>
 </resources>
